add org level connection

--- a/expense-tracker/receipts/.choreo/component.yaml
+++ b/expense-tracker/receipts/.choreo/component.yaml
@@ -9,6 +9,7 @@ endpoints:
     type: REST
     networkVisibilities:
       - Project
+      - Organization
     schemaFilePath: ./openapi.yaml
 dependencies:
     connectionReferences:
